...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4YR-4K-J94">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="41"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="335" id="AGq-ef-WnX"/>
                                            <constraint firstAttribute="height" constant="41" id="x71-i5-1Gz"/>
                                        </constraints>
                                        <state key="normal" title="Sign In">
                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="SignIn:" destination="3a1-Gh-g6p" eventType="touchUpInside" id="jML-P5-Wge"/>
                                        </connections>
                                    </button>
...
                                    <constraint firstItem="5KH-1m-SM7" firstAttribute="height" secondItem="4YR-4K-J94" secondAttribute="height" id="mEj-Q5-h46"/>
                                </constraints>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="NTv-un-1Xu">
                                <rect key="frame" x="20" y="383" width="335" height="94"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Username or email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HtK-FZ-DKB">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="43"/>
                                        <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="43" id="3Hq-5V-zdk"/>
                                            <constraint firstAttribute="width" constant="335" id="Xe3-3I-Xzi"/>
                                        </constraints>
...
